Fix and set scrollbars in dashboard table

--- a/apps/time-tracker-front/src/app/dashboard/components/issue-table/issue-table.component.scss
+++ b/apps/time-tracker-front/src/app/dashboard/components/issue-table/issue-table.component.scss
@@ -1,6 +1,7 @@
 table {
   width: 100%;
   margin-bottom: 2rem;
+  table-layout: fixed;
 
   th.days {
     text-align: center;
@@ -52,4 +53,25 @@ table {
 
 .bold {
   font-weight: bold;
+}
+
+.table-container {
+  max-width: 100%;
+  overflow: auto;
+  height: 100%;
+  max-height: 60vh;
+  margin-bottom: 2rem;
+}
+
+
+[class*="mat-column-"] {
+  width: 90px;
+}
+
+.mat-column-namespace,
+.mat-column-project,
+.mat-column-milestone,
+.mat-column-issue,
+.mat-column-labels {
+  width: 150px;
 }
